# python-web

./: .gitignore  README.md  pyproject.toml
django/: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
django/app/: .env.sample  Dockerfile.prod  conftest.py  entrypoint.sh  movies.json  requirements.txt
django/app/drf_project/: settings.py  urls.py
django/app/movies/: admin.py  urls.py  views.py
django/app/movies/migrations/: 0001_initial.py  0002_movie.py
django/app/tests/movies/: test_api.py  test_foo.py  test_views.py
django/project/: settings.py
django/project/app/: models.py  views.py
django/project/app/views/: __init__.py
django/project/settings/: __init__.py
django/proyecto/: settings.py
fastapi/: README.md  requirements.txt
fastapi/app/: app.py  models.py
fastapi/app/celery_task_app/: tasks.py
fastapi/app/celery_task_app/ml/: model.py
